// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe de mostrar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3>
    Naruto
  </h3>
  <div
    className="skeleton-container"
  >
    <Skeleton
      circle={false}
      count={10}
      delay={0}
      duration={1.2}
      height={250}
      margin={10}
      width={300}
      wrapper={null}
    />
  </div>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe de mostrar items cuando se cargan imagenes en useFetchGifs 1`] = `
<Fragment>
  <h3>
    Naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="AASA"
      url="http://asdasdas.jpg"
    />
  </div>
</Fragment>
`;
